--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "test",
+    "name": "aha_exam_backend",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
