--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "google-auth-library": "^9.11.0",
         "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.3.1",
+        "resend": "^3.3.0",
         "sequelize": "^6.37.3"
     }
 }
