--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
+        "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "fs": "^0.0.1-security",
         "google-auth-library": "^9.11.0",
         "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.3.1",
+        "path": "^0.12.7",
         "resend": "^3.3.0",
         "sequelize": "^6.37.3"
     }
