--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
         "express": "^4.19.2",
         "fs": "^0.0.1-security",
         "google-auth-library": "^9.11.0",
+        "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.3.1",
         "path": "^0.12.7",
         "resend": "^3.3.0",
-        "sequelize": "^6.37.3"
+        "sequelize": "^6.37.3",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
